# publish-devolved-bus-registration-data

./: .gitignore  Makefile  README.md  VERSION  docker-compose.app.override.yml  docker-compose.yaml  docker-compose.yml  makefile
backend/: .env.template  README.md  makefile  packaged.yml  pyproject.toml  pytest.ini  requirements.txt  samconfig.yaml  samconfig.yml  template.yaml  template.yml
backend/bodsdatacatalogue/: datacatalogue.py
backend/src/: main.py
backend/src/csv_handler/: app.py  requirements-dev.txt  requirements.txt
backend/src/csv_handler/auth/: cognitohandler.py  verifier.py
backend/src/csv_handler/central_config/: __init__.py  env.py  fastapi_conf.py
backend/src/data_catalogue/: app.py  requirements.txt
backend/src/managers/: CSV_manager.py  __init__.py
backend/src/otc_client/: app.py  requirements.txt
backend/src/otcclient/: app.py  otcclient.py  requirements.txt
backend/src/utils/: api.py  aws.py  config.py  csv_validator.py  custom_exception.py  db.py  handler.py  logger.py  mocker.py  pydant_model.py  validate.py
backend/src/weca_client/: app.py  client.py  logger.py  requirements.txt  weca_manager.py
backend/tests/: conftest.py  data.csv  pytest.ini  requirements.txt  test_csv_manager.py  test_csv_validator.py  test_custom_db.py  test_data_catalogue.py  test_db.py  test_main.py  test_otc_client.py  test_verifier.py
backend/tests/assets/: validotcresponses.py
backend/tests/csv_handler/: test_app.py  test_csv_manager.py  test_db.py  test_main.py  test_verifier.py
backend/tests/fixtures/: env.py
config/: .env.template  (+3 more)
(+197 files in other folders)
