[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["SamerIssam <samer.salem@kpmg.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
mangum = "^0.17.0"
httpx = "^0.26.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.1"
rich = "^13.7.0"
faker = "^23.2.1"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.27"
cognitojwt = "^1.4.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
boto3 = "^1.34.34"
isort = "^5.13.2"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
ruff = "^0.2.1"
uvicorn = "^0.27.0"

[tool.pytest.ini_options]
pythonpath = [
  "./src/csv_handler",
]
testpaths = [
  "./tests",
]
addopts = "-v -rsxX"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
